--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: Sound Engineer
 description: Website and portfolio of David Lindell Farken, Sound Engineer, Light Technician, Stagecrafter.
 
 author: David Lindell Farken 
-email: davidlindellfarken@lfproductions.se
+email: david@lfproductions.se
 avatar: assets/images/avatar.jpg
 
 baseurl: ""
